# utility-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  entrypoint.sh  generate-nginx-conf.js  install-dependencies.sh
app/next/: bunfig.toml  package-lock.json  package.json  pnpm-lock.yaml
app/next1/: package-lock.json  package.json
app/node/: package.json  pnpm-lock.yaml
app/node1/: app.js  package-lock.json  package.json
app/nuxt/: pnpm-lock.yaml
app/nuxt1/: package-lock.json
app/python/: app.py  pyproject.toml
app/python1/: app.py
